refactor(kmod): Patch overhaul
* Ensure patches are backwards compatible.
* Cleanly split patches, based on reason for change.

Signed-off-by: Joseph Benden <joe@benden.us>

--- a/kmod/dkms.conf
+++ b/kmod/dkms.conf
@@ -4,9 +4,10 @@ MAKE[0]="'make' KERNEL_SRC_DIR=${kernel_source_dir} default"
 CLEAN="'make' KERNEL_SRC_DIR=${kernel_source_dir} clean"
 PATCH[0]="001-vtsspp.patch"
 PATCH[1]="002-src-sys64.S.patch"
-PATCH_MATCH[1]="^5.(5|6)"
-PATCH[2]="003-linux56.patch"
-PATCH_MATCH[2]="^5.6"
+PATCH[2]="003-ioremap.patch"
+PATCH[3]="004-remove-trace-printk.patch"
+PATCH[4]="005-time64.patch"
+PATCH[5]="006-proc_ops.patch"
 BUILT_MODULE_NAME[0]="sep5"
 BUILT_MODULE_LOCATION[0]="src"
 DEST_MODULE_LOCATION[0]="/updates"
