feat(kmod): Fix sep logging at insmod.
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/kmod/dkms.conf
+++ b/kmod/dkms.conf
@@ -8,6 +8,7 @@ PATCH[2]="003-ioremap.patch"
 PATCH[3]="004-remove-trace-printk.patch"
 PATCH[4]="005-time64.patch"
 PATCH[5]="006-proc_ops.patch"
+PATCH[6]="007-loading-is-not-an-error.patch"
 BUILT_MODULE_NAME[0]="sep5"
 BUILT_MODULE_LOCATION[0]="src"
 DEST_MODULE_LOCATION[0]="/updates"
