fix(kmod): Restrict install to kernel versions less than 5.7.
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/kmod/dkms.conf
+++ b/kmod/dkms.conf
@@ -1,5 +1,6 @@
 PACKAGE_NAME="intel-vtune-amplifier"
 PACKAGE_VERSION="2019.5.281.5"
+BUILD_EXCLUSIVE_KERNEL="^([1234]+\.|5\.[0123456]\.)"
 MAKE[0]="'make' KERNEL_SRC_DIR=${kernel_source_dir} default"
 CLEAN="'make' KERNEL_SRC_DIR=${kernel_source_dir} clean"
 PATCH[0]="001-vtsspp.patch"
