fix(kmod): Add support for use with 5.7 or later series kernels.
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/kmod/dkms.conf
+++ b/kmod/dkms.conf
@@ -1,6 +1,5 @@
 PACKAGE_NAME="intel-vtune-amplifier"
 PACKAGE_VERSION="2019.5.281.5"
-BUILD_EXCLUSIVE_KERNEL="^([1234]+\.|5\.[0123456]\.)"
 MAKE[0]="'make' KERNEL_SRC_DIR=${kernel_source_dir} default"
 CLEAN="'make' KERNEL_SRC_DIR=${kernel_source_dir} clean"
 PATCH[0]="001-vtsspp.patch"
@@ -11,6 +10,7 @@ PATCH[4]="005-time64.patch"
 PATCH[5]="006-proc_ops.patch"
 PATCH[6]="007-loading-is-not-an-error.patch"
 PATCH[7]="008-asm-generic.patch"
+PATCH[8]="009-kallsym.patch"
 BUILT_MODULE_NAME[0]="sep5"
 BUILT_MODULE_LOCATION[0]="src"
 DEST_MODULE_LOCATION[0]="/updates"
