--- a/kmod/dkms.conf
+++ b/kmod/dkms.conf
@@ -11,6 +11,8 @@ PATCH[5]="006-proc_ops.patch"
 PATCH[6]="007-loading-is-not-an-error.patch"
 PATCH[7]="008-asm-generic.patch"
 PATCH[8]="009-kallsym.patch"
+PATCH[9]="010-mm_struct.patch"
+PATCH[10]="011-get_user_pages_fast.patch"
 BUILT_MODULE_NAME[0]="sep5"
 BUILT_MODULE_LOCATION[0]="src"
 DEST_MODULE_LOCATION[0]="/updates"
