fix(kmod): Add support for use with 5.9 or later series kernels.
Signed-off-by: Joseph Benden <joe@benden.us>

--- a/kmod/dkms.conf
+++ b/kmod/dkms.conf
@@ -13,6 +13,7 @@ PATCH[7]="008-asm-generic.patch"
 PATCH[8]="009-kallsym.patch"
 PATCH[9]="010-mm_struct.patch"
 PATCH[10]="011-get_user_pages_fast.patch"
+PATCH[11]="012-linux5.9.patch"
 BUILT_MODULE_NAME[0]="sep5"
 BUILT_MODULE_LOCATION[0]="src"
 DEST_MODULE_LOCATION[0]="/updates"
